--- a/app/templates/play.html
+++ b/app/templates/play.html
@@ -11,7 +11,7 @@
       <div id="mediaspace">
 	<script type="text/javascript">
 	  jwplayer('mediaspace').setup({
-	  'flashplayer': 'http://www.soundrenalin.com/static/player.swf',
+	  'flashplayer': '/static/player.swf',
 	  'file': 'http://www.youtube.com/watch?v={{ id }}',
 	  'controlbar': 'bottom',
 	  'width': '720',
