--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -75,7 +75,7 @@
 	  
 	  <div class="span3">
 	    <p class="result">
-	      <a href="javascript:wdpopUp('http://www.soundrenalin.com/play/{{videoid}}/{{videotitle|replace("'", "-")}}-mp3/')" role="button" class="btn btn-success">Play</a>
+	      <a href="javascript:wdpopUp('/play/{{videoid}}/{{videotitle|replace("'", "-")}}-mp3/')" role="button" class="btn btn-success">Play</a>
 {#
 	      <a target="_blank" href="/download/{{ videoid }}/{{ videotitle }}-mp3/" class="btn btn-warning">Download</a>
 	      #}
